src/test/deca/context/invalid/created/object/equals_float_null.deca
// Description :
//    test equals entre un float et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
float a;
null b;
int c = a.equal(b);
}
